Removing code smells
Change-Id: I3774ac6d2e3f30d00b6f2d540a036c9c22a9ceb2
Issue-ID: DMAAP-1195
Signed-off-by: efiacor <fiachra.corcoran@est.tech>